[package]
name = "tweet_indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
reqwest = "0.11.16"
rkyv = "0.7.41"
roux = { version = "2", features = ["blocking"] }
serde = { version = "1.0.59", features = ["derive"] }
serde_json = "1.0.95"
bytecheck = "0.7.0"
chrono = "0.4.24"
byteorder = "1.4.3"
dialoguer = "0.10.4"

[features]

